@@ -1,3 +1,8 @@
+2004-12-12  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* Makefile.in: Use gcc/ada/Make-tools for submake, rather than
+	gcc/ada/Makefile.
+
 2004-12-02  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* Makefile.in: Inline gnattools{1,1-re,2,3,4} targets from
